starter-template.css
body {
  padding-top: 50px;
  background-color:#DDD;
}
.starter-template {
  text-align: center;
}

.coloredcol{
  background-color: lightblue;
  border: 2px solid black;
  border-radius: 6px;
  line-height: 40px;
  text-align: center;
}

.formulaire {
  background-color:#CCC;
  padding: 20px;
}

.initialcss {
	background-color: initial;
	border: initial;
	border-radius: initial;
	line-height: initial;
	text-align: initial;
}

strong {
	color: red;
}

